crates/kul-core/tests/snapshots/export__example_05_cousins_and_in_laws.snap
---
source: crates/kul-core/tests/export.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "giuseppe",
        "name": "Giuseppe Rossi",
        "gender": "male",
        "born": {
          "value": "1940-05-19",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "sofia",
        "name": "Sofia Rossi",
        "gender": "female",
        "born": {
          "value": "1943-01-27",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "marco",
        "name": "Marco Rossi",
        "gender": "male",
        "born": {
          "value": "1968-09-30",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "lucia",
        "name": "Lucia Rossi",
        "gender": "female",
        "born": {
          "value": "1971-04-08",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "elena",
        "name": "Elena Bianchi",
        "gender": "female",
        "born": {
          "value": "1970-11-15",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "matteo",
        "name": "Matteo Rossi",
        "gender": "male",
        "born": {
          "value": "1997-02-14",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "aldo",
        "name": "Aldo Bianchi",
        "gender": "male",
        "born": {
          "value": "1942-08-03",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "bianca",
        "name": "Bianca Bianchi",
        "gender": "female",
        "born": {
          "value": "1945-12-21",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "paolo",
        "name": "Paolo Conti",
        "gender": "male",
        "born": {
          "value": "1969-03-17",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "giulia",
        "name": "Giulia Conti",
        "gender": "female",
        "born": {
          "value": "1998-06-26",
          "precision": "day",
          "circa": false
        }
      }
    ],
    "marriages": [
      {
        "id": "m_giuseppe_sofia",
        "spouses": [
          "giuseppe",
          "sofia"
        ],
        "start": {
          "value": "1965-06-12",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_marco_elena",
        "spouses": [
          "marco",
          "elena"
        ],
        "start": {
          "value": "1995-07-22",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_aldo_bianca",
        "spouses": [
          "aldo",
          "bianca"
        ],
        "start": {
          "value": "1967-05-30",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_lucia_paolo",
        "spouses": [
          "lucia",
          "paolo"
        ],
        "start": {
          "value": "1996-10-05",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_matteo_giulia",
        "spouses": [
          "matteo",
          "giulia"
        ],
        "start": {
          "value": "2020-09-12",
          "precision": "day",
          "circa": false
        }
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_giuseppe_sofia",
        "childId": "marco",
        "kind": "biological"
      },
      {
        "marriageId": "m_giuseppe_sofia",
        "childId": "lucia",
        "kind": "biological"
      },
      {
        "marriageId": "m_aldo_bianca",
        "childId": "elena",
        "kind": "biological"
      },
      {
        "marriageId": "m_marco_elena",
        "childId": "matteo",
        "kind": "biological"
      },
      {
        "marriageId": "m_lucia_paolo",
        "childId": "giulia",
        "kind": "biological"
      }
    ]
  }
}
