crates/kul-core/tests/snapshots/export__example_05_married_siblings.snap
---
source: crates/kul-core/tests/export.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "ramesh",
        "name": "Ramesh Sharma",
        "gender": "male",
        "born": {
          "value": "1925-03-10",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "sita",
        "name": "Sita Sharma",
        "gender": "female",
        "born": {
          "value": "1928-07-15",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "arjun",
        "name": "Arjun Sharma",
        "gender": "male",
        "born": {
          "value": "1950-04-12",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "priya",
        "name": "Priya Sharma",
        "gender": "female",
        "born": {
          "value": "1952-08-19",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "vikram",
        "name": "Vikram Sharma",
        "gender": "male",
        "born": {
          "value": "1955-02-28",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "nisha",
        "name": "Nisha Sharma",
        "gender": "female",
        "born": {
          "value": "1957-06-15",
          "precision": "day",
          "circa": false
        }
      }
    ],
    "marriages": [
      {
        "id": "m_ramesh_sita",
        "spouses": [
          "ramesh",
          "sita"
        ],
        "start": {
          "value": "1948-06-10",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_arjun_priya",
        "spouses": [
          "arjun",
          "priya"
        ],
        "start": {
          "value": "1975-11-04",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_vikram_nisha",
        "spouses": [
          "vikram",
          "nisha"
        ],
        "start": {
          "value": "1980-03-22",
          "precision": "day",
          "circa": false
        }
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_ramesh_sita",
        "childId": "arjun",
        "kind": "biological"
      },
      {
        "marriageId": "m_ramesh_sita",
        "childId": "vikram",
        "kind": "biological"
      }
    ]
  }
}
