crates/kul-core/tests/snapshots/export__example_05_married_siblings_with_positions.snap
---
source: crates/kul-core/tests/export.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "ramesh",
        "name": "Ramesh Sharma",
        "gender": "male",
        "born": {
          "value": "1925-03-10",
          "precision": "day",
          "circa": false
        },
        "span": [
          206,
          273
        ]
      },
      {
        "id": "sita",
        "name": "Sita Sharma",
        "gender": "female",
        "born": {
          "value": "1928-07-15",
          "precision": "day",
          "circa": false
        },
        "span": [
          274,
          341
        ]
      },
      {
        "id": "arjun",
        "name": "Arjun Sharma",
        "gender": "male",
        "born": {
          "value": "1950-04-12",
          "precision": "day",
          "circa": false
        },
        "span": [
          397,
          484
        ]
      },
      {
        "id": "priya",
        "name": "Priya Sharma",
        "gender": "female",
        "born": {
          "value": "1952-08-19",
          "precision": "day",
          "circa": false
        },
        "span": [
          485,
          550
        ]
      },
      {
        "id": "vikram",
        "name": "Vikram Sharma",
        "gender": "male",
        "born": {
          "value": "1955-02-28",
          "precision": "day",
          "circa": false
        },
        "span": [
          606,
          695
        ]
      },
      {
        "id": "nisha",
        "name": "Nisha Sharma",
        "gender": "female",
        "born": {
          "value": "1957-06-15",
          "precision": "day",
          "circa": false
        },
        "span": [
          696,
          763
        ]
      }
    ],
    "marriages": [
      {
        "id": "m_ramesh_sita",
        "spouses": [
          "ramesh",
          "sita"
        ],
        "start": {
          "value": "1948-06-10",
          "precision": "day",
          "circa": false
        },
        "span": [
          343,
          395
        ]
      },
      {
        "id": "m_arjun_priya",
        "spouses": [
          "arjun",
          "priya"
        ],
        "start": {
          "value": "1975-11-04",
          "precision": "day",
          "circa": false
        },
        "span": [
          552,
          604
        ]
      },
      {
        "id": "m_vikram_nisha",
        "spouses": [
          "vikram",
          "nisha"
        ],
        "start": {
          "value": "1980-03-22",
          "precision": "day",
          "circa": false
        },
        "span": [
          765,
          819
        ]
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_ramesh_sita",
        "childId": "arjun",
        "kind": "biological",
        "span": [
          465,
          484
        ]
      },
      {
        "marriageId": "m_ramesh_sita",
        "childId": "vikram",
        "kind": "biological",
        "span": [
          676,
          695
        ]
      }
    ]
  }
}
